project(leetcode_cpp_problems_tests_arrays)

add_subdirectory(k_largest_215)
add_subdirectory(k_closest_points_to_origin_973)
add_subdirectory(merge_intervals_56)
add_subdirectory(max_subarray_53)
add_subdirectory(interval_list_intersections_986)
add_subdirectory(find_min_in_rotated_sorted_array_153)